Corrected "position" to "text-align"

--- a/foundations/05-descendant-combinator/style.css
+++ b/foundations/05-descendant-combinator/style.css
@@ -2,5 +2,5 @@ div p {
     background-color: yellow;
     color: red;
     font-size: 20px;
-    position: center
+    text-align: center
 }
